--- a/GLTest/GLTest.vcxproj
+++ b/GLTest/GLTest.vcxproj
@@ -116,6 +116,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="game.cpp" />
+    <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="texture2d.cpp" />
@@ -123,6 +125,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
+    <ClInclude Include="game.h" />
+    <ClInclude Include="input.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="texture2d.h" />
     <ClInclude Include="window.h" />
