Added specular map

--- a/GLTest/GLTest.vcxproj
+++ b/GLTest/GLTest.vcxproj
@@ -116,24 +116,30 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="directionallight.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="light.cpp" />
     <ClCompile Include="lightmanager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="material.cpp" />
     <ClCompile Include="pointlight.cpp" />
     <ClCompile Include="shader.cpp" />
+    <ClCompile Include="spotlight.cpp" />
     <ClCompile Include="texture2d.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
+    <ClInclude Include="directionallight.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="light.h" />
     <ClInclude Include="lightmanager.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="pointlight.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="spotlight.h" />
     <ClInclude Include="texture2d.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
